--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -17,14 +17,14 @@
 <div class="row">
 <% if params[:action] == 'edit' %>
   
-    <div id="disable" class="form-group col-md-8">
+    <div id="disable" class="form-group col-md-8" value= "<%= @person.disable_person %>">
 <label for="person_disable_person">Disable person</label>
 <input type="hidden" value="0" name="person[disable_person]">
 <input id="person_disable_person" type="checkbox" name="person[disable_person]" value="1">
 </div>
-    </div>
+    
   <% end %>
-
+</div>
 
 
 <div class="row">
