--- a/app/views/entities/_address_fields.html.erb
+++ b/app/views/entities/_address_fields.html.erb
@@ -1,49 +1,37 @@
-<div class="fields">
+<div class="container">
 
- <div class="row">
-  <div class="form-group col-md-4">
-  
-  <%= add.text_field :street , placeholder:'street',:class => "form-control" %>
- 
-  </div>
-  </div>
-
- <div class="row">
-   <div class="form-group col-md-2">
-    
-    <%= add.text_field :city , placeholder:'city', :class => "form-control" %>
-     </div>
- <div class="form-group col-md-4">
-  
-   <%= add.text_field :state , placeholder:'state', :class => "form-control" %>
+   <!-- <div class="row">
+    <div class="form-group col-md-4 col-md-offset-3">
+      <%= add.text_field :street , placeholder:'street',:class => "form-control" %>
     </div>
-    </div>
-
- <div class="row">
-  <div class="form-group col-md-2">
- 
-   <%= add.number_field :zip , placeholder:'zip code', :class => "form-control" %>
+   </div>
+   <div class="row">
+     <div class="form-group col-md-2 col-md-offset-3">
+       <%= add.text_field :city , placeholder:'city', :class => "form-control" %>
      </div>
-
- <div class="form-group col-md-4">
- 
- <%= add.text_field :country , placeholder:'country', :class => "form-control" %>
-    </div>
-      </div>
-
- <div class="row">
-  <div class="form-group col-md-4">
-    
-     <%= add.number_field :tmo , placeholder:'TMO CODE' , :class => "form-control"%>
+     <div class="form-group col-md-2">
+       <%= add.text_field :state , placeholder:'state', :class => "form-control" %>
      </div>
-     </div>
- <div class="row">
- <div class = "form-group col-md-3">
- 
-    
-    <%= add.link_to_remove "Remove this address" , :class => "remove_nested_fields"  %> 
-
    </div>
 
+   <div class="row">
+     <div class="form-group col-md-2 col-md-offset-3">
+       <%= add.number_field :zip , placeholder:'zip code', :class => "form-control" %>
+     </div>
+     <div class="form-group col-md-2">
+       <%= add.text_field :country , placeholder:'country', :class => "form-control" %>
+     </div>
+   </div>
 
+  <div class="row">
+   <div class="form-group col-md-4 col-md-offset-3">
+     <%= add.number_field :tmo , placeholder:'TMO CODE' , :class => "form-control"%>
+    </div>
+  </div>
+
+  <div class="row">
+   <div class = "form-group col-md-3 col-md-offset-3">
+    <%= add.link_to_remove "Remove this address" , :class => "remove_nested_fields"  %> 
+   </div>
+  </div> -->
 </div>
