--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -16,34 +16,41 @@
   <tbody>
 
   <div class = "container">
-
-       <h4>   <%= link_to 'New Person', new_person_path %> </h4>
+      <div class="row">
+        <div class="col-md-4 " >
+          <h3>   <%= link_to 'New Person', new_person_path %> </h3>
+          </div>
+          <div class="col-md-4 ">
                 
-       <h4>     <%= link_to 'Disabled person', disabled_people_path %></h4>
+           <h3>     <%= link_to 'Disabled person', disabled_people_path %></h3>
+         </div>
+        
+      
+
+
+      <div class=" col-md-4" >
+         <%= form_tag(people_path, :method => "get", id: "search-form") do %>
+           <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+            <%= submit_tag "Search" %>
+             <% end %>
+      </div>
     </div>
-
-
-
-  <%= form_tag(people_path, :method => "get", id: "search-form") do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Search" %>
-  <%= submit_tag "Search" %>
-<% end %>
-
-
+  </div>
     <% @people.each do |person| %>
     
-    <div class = "container">
+   <div class = "container">
 
-<div class="row">
-       <div class="peopl_wrapper">
-      <h2 class="form-group col-md-2"><%= link_to person.first_name , @person %></h2>
-        <h4> <%= link_to 'Show', person %></h4>
-          <h4>  <%= link_to 'Edit', edit_person_path(person) %> </h4>
-            <h4>  <%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %> </h4>
-              <p class="date"><%= person.created_at.strftime("%B, %D, %Y")%></p>
-              </div>
-              </div>
-              </div>
+       <div class="row">
+        <div class="peopl_wrapper">
+          <h2 class="table table-bordered">
+           <%= link_to person.first_name , person %></h2>
+
+            <h4 class="table table-hover">  <%= link_to 'Edit', edit_person_path(person) %> </h4>
+            <h4 class="table table-hover">  <%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %> </h4>
+            <h3> <p class="date"><%= person.created_at.strftime("%B, %D, %Y")%></p></h3>
+        </div>
+        </div>
+        </div>
 
       <tr>
         
@@ -52,6 +59,11 @@
     <% end %>
   </tbody>
 </table>
-<%= will_paginate @people %>
-<br>
-
+  <div class="container">
+ 
+    <div class="row">
+    <div class="col-md-3 col-md-offset-3">
+   <h4> <%= will_paginate @people %> </h4>
+   </div>
+  </div>
+</div>
