--- a/app/views/entities/_address_fields.html.erb
+++ b/app/views/entities/_address_fields.html.erb
@@ -1,6 +1,5 @@
-<div class="container">
 
-   <!-- <div class="row">
+   <div class="row">
     <div class="form-group col-md-4 col-md-offset-3">
       <%= add.text_field :street , placeholder:'street',:class => "form-control" %>
     </div>
@@ -33,5 +32,4 @@
    <div class = "form-group col-md-3 col-md-offset-3">
     <%= add.link_to_remove "Remove this address" , :class => "remove_nested_fields"  %> 
    </div>
-  </div> -->
-</div>
+  </div>
