--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -27,109 +27,95 @@
 
 
       <div class="row">
-      <div class="form-group col-md-4 col-md-offset-3">
-      <select id="entity_selector" name="entity[selector][]"  multiple="multiple" value=" <%= @entity.selector %>" >
+      <div class="form-group col-sm-4 col-md-offset-3">
+      <label for="id_label_multiple">
+          Entity Type
+      <select class="entity_selector form-control" name="entity[selector][]"  multiple="multiple" value=" <%= @entity.selector %>" id="id_label_multiple" >
      <option value="Applicant">Applicant</option>
      <option value="Client">Client</option>
       <option value="Foreign Counsel">Foreign Counsel</option>
       </select>
+      </label>
+            
       </div>
-      </div>
-  
-
-    <div class="row">
-       <div class="form-group col-md-4 col-md-offset-3">
-       <input type="text" id="entity_entity_name" name="entity[entity_name]" class= "form-control" placeholder="Entity Name " value="<%= @entity.entity_name%>" >
-      </div>
-    </div>
-
-    <div class="row">
-     <div class="form-group col-md-4 col-md-offset-3">
-      <input type="text" id="entity_existing_type" name="entity[existing_type]" class="form-control" placeholder=" Existing Type" value="<%= @entity.existing_type %>"  >
-     </div>
-    </div>
-  
-      
-     
-      <h4> <%= f.link_to_add "Add Address", :addresses %> </h4>
-      
-    
-    
-      <%= f.fields_for  :addresses do |add| %>
-      <%#= render 'address_fields', :add => add %>
-      <div class="row">
-    <div class="form-group col-md-4 col-md-offset-3">
-      <%= add.text_field :street , placeholder:'street',:class => "form-control" %>
-    </div>
-   </div>
-   <div class="row">
-     <div class="form-group col-md-2 col-md-offset-3">
-       <%= add.text_field :city , placeholder:'city', :class => "form-control" %>
-     </div>
-     <div class="form-group col-md-2">
-       <%= add.text_field :state , placeholder:'state', :class => "form-control" %>
-     </div>
-   </div>
-
-   <div class="row">
-     <div class="form-group col-md-2 col-md-offset-3">
-       <%= add.number_field :zip , placeholder:'zip code', :class => "form-control" %>
-     </div>
-     <div class="form-group col-md-2">
-       <%= add.text_field :country , placeholder:'country', :class => "form-control" %>
-     </div>
-   </div>
-
-  <div class="row">
-   <div class="form-group col-md-4 col-md-offset-3">
-     <%= add.number_field :tmo , placeholder:'TMO CODE' , :class => "form-control"%>
-    </div>
-  </div>
-
-  <div class="row">
-   <div class = "form-group col-md-3 col-md-offset-3">
-    <%= add.link_to_remove "Remove this address" , :class => "remove_nested_fields"  %> 
-   </div>
-  </div>
- <% end %>
- 
-    
-  
-    <div class="row" value="<%= @entity.billing %>">
-      <div class="form-group col-lg-2 col-md-offset-3">
-        <%= f.label :billing %><br>
-        <%= f.select :billing , [ 'INR','USD','EUR']%>
-      </div>
-    
- 
-
-    <div class="form-group col-lg-3 " value="<%= @entity.credit %>">
-     <%= f.label :credit %><br>
-     <%= f.select :credit ,['0','15','30','45','60','75','90','120'] %>
-    </div>
-    </div>
- 
-  
-  <div class="form-group col-lg-9 col-md-offset-3" value="<%= @entity.notes %>">
-    <%= f.label :notes %><br>
-    <%= f.text_area :notes %>
-  </div>
-   
-  
-
-    <div class="row">
-     <div class="form-group col-lg-3 col-md-offset-4">
-        <div class="actions">
-        <%= f.submit %>
+      <%# if params[:action] == 'edit' %>
+            <!-- <input id="entity type" class="form-group col-sm-4 col-md-offset-3" type="text" value="<%= @entity.selector %>">
+            
+            <%# end %> -->
         </div>
-     </div>
-    </div>
-  </div>
-<% end %>
-<script type="text/javascript">
-$("#entity_selector").select2({
-  tags: true
+    
+       <div class="container">
+          
+          <div class="row">
+             <div class="form-group col-md-4 col-md-offset-3">
+             <input type="text" id="entity_entity_name" name="entity[entity_name]" class= "form-control" placeholder="Entity Name " value="<%= @entity.entity_name%>" >
+            </div>
+          </div>
+
+          <div class="row">
+           <div class="form-group col-md-4 col-md-offset-3">
+            <input type="text" id="entity_existing_type" name="entity[existing_type]" class="form-control" placeholder=" Existing Type" value="<%= @entity.existing_type %>"  >
+           </div>
+          </div>
+           
+             <div class="row" id="address">
+             <%= f.fields_for  :addresses do |add| %>
+                <%= render 'address_fields', :add => add %>
+             <% end %>
+              <div>
+                 <h4> <%= f.link_to_add "Add Address", :addresses %> </h4>
+                
+                </div>
+           </div>
+          
+    
   
+            <div class="row" value="<%= @entity.billing %>">
+              <div class="form-group col-lg-2 col-md-offset-3">
+                <%= f.label :billing %><br>
+                <%= f.select :billing , [ 'INR','USD','EUR']%>
+              </div>
+            
+         
+
+            <div class="form-group col-lg-3 " value="<%= @entity.credit %>">
+             <%= f.label :credit %><br>
+             <%= f.select :credit ,['0','15','30','45','60','75','90','120'] %>
+            </div>
+            </div>
+         
+          
+              <div class="form-group col-lg-9 col-md-offset-3" value="<%= @entity.notes %>">
+                <%= f.label :notes %><br>
+                <%= f.text_area :notes %>
+              </div>
+   
+         
+             
+              <div class="row">
+               
+              
+              
+               <div class="form-group col-md-3 col-md-offset-3">
+                  <div class="actions">
+                  <%= f.submit %>
+                  </div>
+                 
+                </div>
+                </div>
+              </div>
+         </div>
+        
+    
+   <% end %>
+   </body>
+<script type="text/javascript">
+$("#id_label_multiple").select2({
+  data: ["Applicant","Client","Foreign Counsel"],
+    tags: true,
+    tokenSeparators: [','], 
+    
 });
+
 </script>
 
