--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -63,12 +63,15 @@
 </div>
 </div>
 
+
+<address>
+
 <div class="row">
 <div class="col-md-4 col-md-offset-2">
-<h3>
+
   
   <% @entity.addresses.each do |add| %>
-  <strong>Address <%= add.id%>:</strong>
+  <h3><strong>Address <%= add.id %></strong></h3>
  <h4> <%= add.street %> </h4>
  <h4> <%= add.city %> </h4>
  <h4> <%= add.country %> </h4>
@@ -77,9 +80,10 @@
  <h4> <%= add.state %> </h4>
 
   <% end %>
-</h3>
 </div>
-</div>
+</div>  
+</address>
+
 
 
 <div class="row">
