--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -62,14 +62,14 @@
     <%= f.text_field :country %>
   </div>
   </div>
-  <div class="row">
-  <div class="form-group col-md-2 col-md-offset-3">
+  <div class="row"  >
+  <div class="form-group col-md-2 col-md-offset-3" id="keyContact">
     <%= f.label :key_contact %><br>
     <%= f.check_box :key_contact %>
   </div>
   <div class="form-group col-md-4">
-    <%= f.label :tags %><br>
-    <%= f.text_field :tags %>
+    <%= f.label :tag_list %><br>
+    <%= f.text_field :tag_list %>
   </div>
   </div>
   <div class="row">
@@ -78,11 +78,8 @@
     <%= f.label :notes %><br>
     <%= f.text_area :notes %>
   </div>
-  
-   
-
-
   </div>
+ 
   </div>
 <div class="row">
   <div class="form-group col-lg-3 col-md-offset-4" >
@@ -98,5 +95,7 @@
 
 
 
-
 </body> 
+ 
+        <!--     
+        </div>
