--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -2,68 +2,66 @@
 
 <center><h1>Listing People</h1></center>
 
-<table>
-  <thead>
 
-
-
-    <tr>
-    
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  
+  
 
   <div class = "container">
       <div class="row">
         <div class="col-md-4 " >
           <h3>   <%= link_to 'New Person', new_person_path %> </h3>
           </div>
-          <div class="col-md-4 ">
+           <div class="col-md-4 ">
                 
-           <h3>     <%= link_to 'Disabled person', disabled_people_path %></h3>
-         </div>
-        
-      
-
-
-      <div class=" col-md-4" >
-         <%= form_tag(people_path, :method => "get", id: "search-form") do %>
-           <%= text_field_tag :search, params[:search], placeholder: "Search" %>
-            <%= submit_tag "Search" %>
+            <h3>     <%= link_to 'Disabled person', disabled_people_path %></h3>
+          </div>
+          <div class=" col-md-4" >
+             <%= form_tag(people_path, :method => "get", id: "search-form") do %>
+             <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+             <%= submit_tag "Search" %>
              <% end %>
+          </div>
+      </div>
+  
+   
+
+    <% @people.each do |person| %>
+      <div class="container">
+         <table class="table table-condensed">
+             <thead>
+                <tr>
+                  <th>First Name</th>
+                  
+                  <th>Profession</th>
+                  <th> Entry date </th>
+                  <th> Tags</th>
+                </tr>
+              </thead>
+              <tbody>
+                 <tr>
+                    <td><h3><%= link_to person.first_name ,person %></h3><div  class="label label-primary" id="key">Key Contact</div></td>
+                    
+                    <td><h3><%= link_to person.job %></h3></td>
+                    <td><h3> <p class="date"><%= person.created_at.strftime("%B, %D, %Y")%></p></h3></td>
+                    <td><h3><%= raw person.tag_list.map { |t| link_to t ,  tag_people_path(t)  }.join(', ') %></h3></td>
+                    <td> <h3><%= link_to 'Edit', edit_person_path(person) %> </h4>
+                    <%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %> </h3> </td>
+
+                  </tr>
+                  </tbody>
+                  </table>
+                  </div>
+                  </div>
+                <% end %>
+
+                  
+    
+  
+    <div class="container">
+      <div class="row">
+       <div class="col-md-3 col-md-offset-3">
+        <h4> <%= will_paginate @people %> </h4>
+       </div>
       </div>
     </div>
-  </div>
-    <% @people.each do |person| %>
-    
-   <div class = "container">
-
-       <div class="row">
-        <div class="peopl_wrapper">
-          <h2 class="table table-bordered">
-           <%= link_to person.first_name , person %></h2>
-
-            <h4 class="table table-hover">  <%= link_to 'Edit', edit_person_path(person) %> </h4>
-            <h4 class="table table-hover">  <%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %> </h4>
-            <h3> <p class="date"><%= person.created_at.strftime("%B, %D, %Y")%></p></h3>
-        </div>
-        </div>
-        </div>
-
-      <tr>
-        
-       
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-  <div class="container">
- 
-    <div class="row">
-    <div class="col-md-3 col-md-offset-3">
-   <h4> <%= will_paginate @people %> </h4>
-   </div>
-  </div>
 </div>
