--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,7 +38,7 @@
              <thead>
                 <tr>
                   <th>First Name</th>
-                  <th>Profession</th>
+                  <th>Email</th>
                   <th> Entry date </th>
                   <th> Tags</th>
                 </tr>
@@ -49,7 +49,7 @@
                  <tr>
                     <td class="col-md-2"><h3><%= link_to user.first_name ,user %></h3></td>
                     
-                    <td class="col-md-2"><h3><%= link_to user.job %></h3></td>
+                    <td class="col-md-2"><h3><%= link_to user.email %></h3></td>
                     <td ><h3> <p class="date"><%= user.created_at.strftime("%B, %D, %Y")%></p></h3></td>
                     <td class="col-md-4"><h3><%= raw user.tag_list.map { |t| link_to t ,  tag_users_path(t)  }.join(', ') %></h3></td>
                     <td class="col-md-2"> <h3><%= link_to 'Edit', edit_user_path(user) %> </h4>
