fixed the address attributes issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,17 @@
 
 
 
-*/
+/**/
 /*.selectrow {
     display : block;
     padding : 20px;
 }
 .select2-container {
     width: 200px;
-}
-*/
+}*/
+
+
+/*#address{
+
+	display: none;
+}*/
