--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -3,7 +3,7 @@
              <center>  <h1>Listing Entities</h1> </center>
  <div class = "container">
      <div class="row">
-         <div class="col-md-4 " >
+         <div class="col-md-4 " id="newentity" >
           <h3> <%= link_to 'New Entity', new_entity_path %> </h3>
          </div>
          <div class="col-md-4">
