--- a/app/views/public_activity/entity/_destroy.html.erb
+++ b/app/views/public_activity/entity/_destroy.html.erb
@@ -1,7 +1,8 @@
-<h5> Updated </h5>
+<h5> deleted </h5>
 
  <% if activity.trackable %>
  <h5><%= link_to activity.trackable.entity_name %></h5>
  <% else %>
    which is been destroyed
    <% end  %>
+   
