--- a/app/views/public_activity/entity/_entity_name.html.erb
+++ b/app/views/public_activity/entity/_entity_name.html.erb
@@ -1,4 +1,4 @@
-<h5> Updated </h5>
+<h5> changed Name of </h5>
 
  <% if activity.trackable %>
  <h5><%= link_to activity.trackable.entity_name %></h5>
