--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -47,7 +47,7 @@
               <% @users.each do |user| %>
     
                  <tr>
-                    <td class="col-md-2"><h3><%= link_to user.first_name ,user %></h3></td>
+                    <td class="col-md-2"><h3><%= link_to user.first_name ,user %></h3> <span class="label label-primary" id="keyc">Key Contact</span></td>
                     
                     <td class="col-md-2"><h3><%= link_to user.email %></h3></td>
                     <td ><h3> <p class="date"><%= user.created_at.strftime("%B, %D, %Y")%></p></h3></td>
