--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,6 @@
 </head>
 
 
-<%= render 'form', locals: {user: @user} %>
+<%= render 'form', :locals => { :user => @user } %>
 
 <%= link_to 'Back', users_path %>
