--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,7 @@
 
 <p>
   <strong>Disable person:</strong>
-  <%= @user.disable_person %>
+  <%= @user.disable_user %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
