--- a/app/views/entities/_address_fields.html.erb
+++ b/app/views/entities/_address_fields.html.erb
@@ -1,35 +1,67 @@
 
-   <div class="row">
-    <div class="form-group col-md-4 col-md-offset-3">
-      <%= add.text_field :street , placeholder:'street',:class => "form-control" %>
+<%# @entity.addresses.each do |f| %>
+
+<%#= add.fields_for :addresses do |f| %>
+
+<div class="addhide" id="addid">
+<div class="row">
+    <div class="form-group col-md-4 col-md-offset-3" id="street">
+      <%= f.text_field :street , placeholder:'street',:class => "form-control" %>
     </div>
    </div>
    <div class="row">
      <div class="form-group col-md-2 col-md-offset-3">
-       <%= add.text_field :city , placeholder:'city', :class => "form-control" %>
+       <%= f.text_field :city , placeholder:'city', :class => "form-control" %>
      </div>
      <div class="form-group col-md-2">
-       <%= add.text_field :state , placeholder:'state', :class => "form-control" %>
+       <%= f.text_field :state , placeholder:'state', :class => "form-control" %>
      </div>
    </div>
 
    <div class="row">
      <div class="form-group col-md-2 col-md-offset-3">
-       <%= add.number_field :zip , placeholder:'zip code', :class => "form-control" %>
+       <%= f.number_field :zip , placeholder:'zip code', :class => "form-control" %>
      </div>
-     <div class="form-group col-md-2">
-       <%= add.text_field :country , placeholder:'country', :class => "form-control" %>
+     <div class="form-group col-md-2" id="country">
+       <%= f.country_select :country , include_blank: true , placeholder:'country', :class => "form-control" %>
      </div>
    </div>
 
   <div class="row">
    <div class="form-group col-md-4 col-md-offset-3">
-     <%= add.number_field :tmo , placeholder:'TMO CODE' , :class => "form-control"%>
+     <%= f.number_field :tmo , placeholder:'TMO CODE' , :class => "form-control"%>
     </div>
   </div>
 
   <div class="row">
-   <div class = "form-group col-md-3 col-md-offset-3">
-    <%= add.link_to_remove "Remove this address" , :class => "remove_nested_fields"  %> 
+   <div class = "form-group col-md-3 col-md-offset-3" >
+   <a href="javascript:void(0)">
+    <%= f.link_to_remove "Remove this address" , :class => "remove_nested_fields"  %> 
+   </a>
    </div>
   </div>
+</div>
+<%# end %>
+<%# end %>
+<script type="text/javascript">
+$(document).ready(function(){
+
+
+
+
+// $(document).delegate('#addlink','click',function(e){
+   
+//   $("#addid").append();
+// })
+
+
+
+
+
+})
+<% if params[:action] != "edit" %>
+
+ $("#addid").hide();
+<% end %>  
+  
+</script>
