--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -59,7 +59,7 @@
   </div>
   <div class="form-group col-md-4" id="country">
     <%= f.label :country %><br>
-    <%= f.text_field :country %>
+    <%= f.country_select :country %>
   </div>
   </div>
   <div class="row"  >
