--- a/app/views/public_activity/entity/update/_update.html.erb
+++ b/app/views/public_activity/entity/update/_update.html.erb
@@ -1,7 +1,7 @@
-<h3> deleted </h3>
+<h5> Updated </h5>
 
  <% if activity.trackable %>
- <h3><%= link_to activity.trackable.entity_name %></h3>
+ <h5><%= link_to activity.trackable.entity_name %></h5>
  <% else %>
    which is been destroyed
    <% end  %>
