--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,9 +17,9 @@
 <div class="row">
 <% if params[:action] == 'edit' %>
   
-    <div id="disable" class="form-group col-md-8 col-md-offset-3" value= "<%= @user.disable_person %>">
+    <div id="disable" class="form-group col-md-8 col-md-offset-3" value= "<%= @user.disable_user %>">
     <%= f.label :disable_person %>
-    <%= f.check_box :disable_person  %>
+    <%= f.check_box :disable_user  %>
     </div>
     
   <% end %>
@@ -59,7 +59,7 @@
   </div>
   <div class="form-group col-md-4" id="country">
     <%= f.label :country %><br>
-    <%= f.text_field :country %>
+    <%= f.country_select :country, selected: "IN" %>
   </div>
   </div>
   <div class="row"  >
