--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -71,7 +71,7 @@
 
   
   <% @entity.addresses.each do |add| %>
-  <h3><strong>Address <%= add.id %></strong></h3>
+  <h3><strong>Address </strong></h3>
  <h4> <%= add.street %> </h4>
  <h4> <%= add.city %> </h4>
  <h4> <%= add.country %> </h4>
