--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -31,13 +31,18 @@
       <div class="form-group col-sm-4 col-md-offset-3">
       <label for="id_label_multiple">
           Entity Type
-     <!--  <select class="" name="entity[selector][]"  multiple="multiple" value=" <%= @entity.selector %>" id="id_label_multiple" selected="<%= @entity.selector%>" >
-     <option value="Applicant" >Applicant</option>
+    <select class="" name="entity[selector][]"  multiple="multiple" value=" <%= @entity.selector %>" id="id_label_multiple"  >
+     <option value="Applicant"  >Applicant</option>
      <option value="Client"   >Client</option>
       <option value="Foreign Counsel"  >Foreign Counsel</option>
-      </select> -->
-
-        <%= f.select :selector,options_for_select( ['Applicant','Client','Foreign Counsel'] ) ,{ :selected => f.object.selector }, { :multiple => true, :id => "id_label_multiple", :class => "form-control" } %> 
+      </select>
+ 
+        <%#= f.select :selector,options_for_select( ['Applicant','Client','Foreign Counsel'] ) ,{ :selected => @entity.selector }, { :multiple => true, :id => "id_label_multiple", :class => "form-control" } %> 
+        <%# if params[:action] == 'edit' %> 
+            
+            <%#= f.text_area :selector  %>
+ 
+            <%# end %>
       
     </label>
             
@@ -92,41 +97,55 @@
                
               
               
-               <div class="form-group col-md-3 col-md-offset-3">
-                  <div class="actions">
-                  <%= f.submit %>
-                  </div>
-                  <div>
+               <div class="form-group col-md-3 col-sm-offset-3">
+                  <div class="form-group col-md-7 ">
                  <h4> <%= f.link_to_add "Add Address",:addresses ,:id => 'addlink', :data => { :target => "#address" } ,:remote => true  %> </h4>
                 </div>
 
+                  <div class="actions">
+                  <%= f.submit %>
+                  </div>
+                  
+                 
                 </div>
                 </div>
               </div>
+          
          </div>
-        
-   
-   <% end %>
-   </body>
+
 <script type="text/javascript">
 
  
-$("#id_label_multiple").select2(
-  {tags: true , multiple: true}
+    $("#id_label_multiple ").select2({tags: true,multiple:true});
+     
 
-  );
+$('#id_label_multiple').val();
 
 
- $('select').select2().select2('val');
- $('select').select2('val');
+     // $('select').select2();
+
+
+
+ // $("#id_label_multiple").select2({tags: true,multiple: true})    
+
+// $("#id_label_multiple").on("select2:select", function (e) { 
+//                         var select_val = $(e.currentTarget).val();
+//                         console.log(select_val)
+//                     });
 
 
  
-
+  
 
 
 </script>
 
+
+
+        
+  
+   <% end %>
+   </body>
 
 
 
