--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Entity</h1>
+<center> <h1>New Entity</h1></center>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', entities_path %>
+
+<div class="row">
+<div class="col-md-4 col-md-offset-4">
+<h5><%= link_to 'Back', entities_path %></h5>
+</div>
+</div>
