--- a/app/views/public_activity/entity/update/_entity_name.html.erb
+++ b/app/views/public_activity/entity/update/_entity_name.html.erb
@@ -1,9 +1,7 @@
-<h5> Updated </h5>
+<h5> changed Name of </h5>
 
  <% if activity.trackable %>
-
  <h5><%= link_to activity.trackable.entity_name %></h5>
-
  <% else %>
    which is been destroyed
    <% end  %>
